Add button to save data to Google Sheets
Signed-off-by: nindyasri1 <kingsmart.psl@gmail.com>

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </select>
         <input type="number" id="jumlah" placeholder="Jumlah (Rp)" required>
         <input type="text" id="keterangan" placeholder="Keterangan" required>
+        <button type="button" onclick="simpanKeGoogle()">Simpan ke Google Sheet</button>
         <button type="submit">Simpan</button>
     </form>
 
@@ -38,3 +39,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
